# play-audio-sdl-3.3.4-c

./: CMakeLists.txt  README.md  config-exe.bat  config-web.bat
src/: main.c
